2008-05-08  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-dbus-daemon.h:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-thunderbird.c:
	* src/trackerd/tracker-email.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-parser.c:
	* src/trackerd/tracker-process-files.h:
	* src/trackerd/tracker-utils.c:
	* src/trackerd/tracker-xesam.c:
	* src/trackerd/trackerd.[ch]: Renamed trackerd.[ch] to tracker-main.[ch].

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-interface-sqlite.c:
	Moved all sqlite3 queries to one thread in GThreadPool, prepared the
	ground for future asynchronous calling back.

2008-05-07  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db.c
	* src/trackerd/tracker-db-sqlite.h:
	Removed DBConnection from ServiceTypeInfo struct.

2008-05-07  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h
	* src/trackerd/trackerd.c:
	(tracker_db_initialize -> tracker_db_load_prepared_queries)
	(tracker_create_db -> tracker_create_common_db)
	Removed duplicate code. Databases are opened using open_db and
	set_params.

2008-05-07  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.h:
	* src/libtracker-common/tracker-configuration.[ch]:
	* src/libtracker-common/tracker-file-utils.h:
	* src/libtracker-common/tracker-language.h:
	* src/libtracker-common/tracker-log.h:
	* src/libtracker-common/tracker-os-dependant.h:
	* src/libtracker-common/tracker-type-utils.h:
	* src/libtracker-common/tracker-utils.h:
	* src/libtracker-db/tracker-db-action.h:
	* src/trackerd/tracker-apps.h:
	* src/trackerd/tracker-cache.h:
	* src/trackerd/tracker-db-email.h:
	* src/trackerd/tracker-db-sqlite.h:
	* src/trackerd/tracker-db.h:
	* src/trackerd/tracker-dbus-daemon.h:
	* src/trackerd/tracker-dbus-files.h: