@@ -1,3 +1,12 @@
+2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>
+	* src/trackerd/tracker-db-sqlite.c:
+	* src/trackerd/tracker-db-sqlite.h:
+	* data/sqlite-stored-procs.sql:
+	* data/sqlite-cache.sql:
+	* data/Makefile.am:
+	* data/sqlite-temp-tables.sql: Moved LiveSearches and Events to the 
+	cache db
+
 2008-05-08  Martyn Russell  <martyn@imendio.com>
 
 	* src/trackerd/Makefile.am:
